[FIX]  web_dashboard, documents_spreadsheet: fix multiple display errors
This commit will fix some display errors:
 - The "Insert in Spreadsheet" button will be placed in its own
    btn-group to behave as the other control panel buttons;
- On the dashboard view, the icon of the "Group By" menu on the graph
    view wasn't visible;
- On the dashboard view, a big space existed between the control panel
    and the first subView.

closes odoo/enterprise#20872

X-original-commit: 9cf68c14e1986a5a894d506fde37aa10ccf18e48
Related: odoo/odoo#76529

--- a/web_dashboard/static/src/dashboard_view/dashboard_view.scss
+++ b/web_dashboard/static/src/dashboard_view/dashboard_view.scss
@@ -14,7 +14,6 @@
     align-items: flex-start;
     width: 100%;
     height: auto;
-    padding: $o-sheet-vpadding 0;
     background-color: white;
 
     %o-dashboard-label-design {
